--- a/loc/0.html
+++ b/loc/0.html
@@ -5,5 +5,6 @@
 <br>
 <a href="00.html"><<Почати гру>></a><br>
 <a href="auto.html"><<Почитати про автора>></a><br>
+<a href="download.html"><<Лінк для завантаження>></a><br>
 </div>
 </body>
